tests/error/modifier_errors/power_arg_typecheck_inside.py
from guppylang.decorator import guppy


@guppy
def test() -> None:
    with power(12 + False):
        pass


test.compile()
