tests/error/modifier_errors/power_arg_typecheck_inside.err
Error: Operator not defined (at $FILE:6:15)
  | 
4 | @guppy
5 | def test() -> None:
6 |     with power(12 + False):
  |                ^^^^^^^^^^ Binary operator `+` not defined for `int` and `bool`

Guppy compilation failed due to 1 previous error
